# brain-teaser

./: .cache  .gitignore  .project  README.md  hskllQ01to10.hs
2sum01/: 2sum01.cabal
2sum01/src/: Main.hs
LeetJava/src/: BitPlayground.java  Graph.java  GraphTest.java  HouseRobber.java  HouseRobberTest.java  LongestSubList.java  NumArray.java  NumArray01.java  NumArray01Test.java  UglyNumber.java  WordPattern.java
MyJava/src/: Leet01.java
MyKotlin/src/: MinStack.kt  MyKotlin01.kt  MyKotlin02.kt  MyKotlin03.kt  Validator.kt  countPaths.kt  funs.kt
edx-fun/: edx-fun.cabal
edx-fun/src/: ADTs.hs  Hw8.hs  Lab4.hs  Main.hs  lab2.hs  lab3.hs
errors/src/: MyCal.scala  Option.scala
euler-hs/: euler-hs.cabal
euler-hs/src/: Main.hs
js/: binaryTreePaths.js
leet/: build.gradle
leet-swift/: Cartfile.resolved
leet-swift/leets/: AppDelegate.swift  LongestCommonPrefix.swift  MergeTwoSortedLists.swift  PalindromeNumber.swift  RemoveDuplicates.swift  ReverseInteger.swift  StringToInteger.swift  Tree.swift  ValidParentheses.swift  ViewController.swift  ZigZagConversion.swift
leet-swift/leets.xcodeproj/: project.pbxproj
leet-swift/leetsTests/: LongestCommonPrefixTest.swift  MergeTwoSortedListsTest.swift  PalindromeNumberTest.swift  RemoveDuplicatesTest.swift  ReverseIntegerTest.swift  StringToIntegerTest.swift  TreeTest.swift  (+3 more)
my-tree/: my-tree.cabal
purescript/: bower.json
questions/: questions.cabal
relearn-c/: README.md
spoj/: spoj.cabal
spoj/src/: Basics01.hs  CharPttrn1.hs  SmpDiv.hs  SmpSum.hs
write-yourself-scheme/: write-yourself-scheme.cabal
(+68 files in other folders)
